--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,10 +1,11 @@
 ---
 title: home
+page: home
 ---
 {% extends "layouts/_layout.html" %}
 
 {% block content %}
-  {% include "partials/_header.html" %}
+  
   {% include "partials/_hero.html" %}
   {% include "partials/sections/_s-hits.html" %}
   {% include "partials/sections/_s-vine.html" %}
@@ -14,7 +15,7 @@ title: home
   {% include "partials/sections/_s-delivery.html" %}
   {% include "partials/sections/_s-gallery.html" %}
   {% include "partials/sections/_s-contacts.html" %}
-  {% include "partials/_footer.html" %}
+  
 {% endblock %}
 
 
