--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -14,7 +14,31 @@
 
     <!-- BEGIN content -->
     <div class="out{% if outClass %} {{ outClass }}{% endif %}">
-      {% block content %}{% endblock %}
+      {% include "partials/_header.html" %}
+      <!-- begin main -->
+      <main class="main{% if mainClass %} {{ mainClass }}{% endif %}">
+        {% if breadcrumbs %}
+        <!-- begin main__breadcrumbs -->
+        <div class="main__breadcrumbs">
+          <div class="container">
+            {{ mixins.list(
+              name = 'breadcrumbs',
+              modifications = { wrap: breadcrumbs.mod },
+              list = breadcrumbs.list
+            ) }}
+            {% if breadcrumbs.link %}
+            <div class="main__back">
+              <a href="#" class="back-link">К меню</a>
+            </div>  
+            {% endif %}
+          </div>
+        </div>
+        <!-- end main__breadcrumbs -->
+        {% endif %}
+        {% block content %}{% endblock %}
+      </main>
+      <!-- end main -->      
+      {% include "partials/_footer.html" %}
     </div>
     <!-- END content -->
 
