--- a/src/templates/partials/_hits-slider.html
+++ b/src/templates/partials/_hits-slider.html
@@ -7,20 +7,25 @@ slider = {
       tab: 'main_course',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     },
@@ -29,20 +34,25 @@ slider = {
       tab: 'salad',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     },
@@ -51,20 +61,25 @@ slider = {
       btn: 'Холодные закуски',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     },
@@ -73,20 +88,25 @@ slider = {
       btn: 'Мангал/Гриль',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     },
@@ -95,20 +115,25 @@ slider = {
       btn: 'Первые блюда',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     },
@@ -117,20 +142,25 @@ slider = {
       btn: 'Напитки',
       slider: [
         {
-          label: true,
-          title: 'кебаб из курицы'
+          label: { title: 'акция' },
+          title: 'кебаб из курицы',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'шашлык из свинины'
+          title: 'шашлык из свинины',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         },
         {
-          title: 'форель на мангале'
+          title: 'форель на мангале',
+          price: '<div class="price">95.00<small>грн</small></div> (100 г)'
         }
       ]
     }    
@@ -140,7 +170,7 @@ slider = {
 
 <!-- begin slider -->
 <div class="slider__wrap slider--items__wrap slider--items-tabs__wrap js-tabs">
-  <div class="slider__tabs-nav">
+  <div class="slider__tabs-nav js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.2s">
     <!-- begin slider-nav -->
     <div class="slider-nav">
       {% for i in slider.tabs %}
@@ -152,7 +182,7 @@ slider = {
   </div>
 
 
-  <div class="slider__tabs-items">
+  <div class="slider__tabs-items js-anim-el" data-anim-name="fadeInLeft" data-anim-delay="0.4s">
     {% for i in slider.tabs %}
     <div class="slider__tabs-item js-tabs-item{% if i.active %} is-active{% endif %} " data-tab="{{ i.tab }}">
       <div class="slider__wrap">
@@ -160,47 +190,12 @@ slider = {
           <div class="swiper-wrapper">
             {% for j in i.slider %}
             <div class="swiper-slide">
-              <!-- begin item -->
-              <div class="item">
-                {% if j.label %}
-                <div class="item__label">акция</div>
-                {% endif %}
-                <!-- <div class="item__img js-lazy" data-background-image="./img/slider/lulya3.png"> -->
-                <div class="item__img">
-                  <img data-src="./img/slider/lulya3.png" alt="" class="js-lazy">
-                </div>
-
-                <div class="item__title">{{ j.title }}</div>
-
-                <div class="item__price">
-                  <div class="price">95.00<small>грн</small></div> (100 г)
-                </div>
-
-                <div class="item__counter">
-                  <!-- begin counter -->
-                  <div class="counter">
-                    <div class="counter__inner">
-                      <button>-</button>
-                      <input type="text" value="1">
-                      <button>+</button>
-                    </div>
-                  </div>
-                  <!-- end counter -->
-                </div>
-
-                <div class="item__btn">
-                  <!-- begin border -->
-                  <div class="border">
-
-                    {{ mixins.btn(
-                      title = 'Заказать доставку',
-                      mod = 'btn--full'
-                    ) }}
-                  </div>
-                  <!-- end border -->
-                </div>
-              </div>
-              <!-- end item -->
+              {{ mixins.item(
+                price = j.price,
+                title = j.title,
+                img = 'lulya3.png',
+                label = j.label
+              ) }}              
             </div>
             {% endfor %}
           </div>
