--- a/src/templates/partials/sections/_s-features-item.html
+++ b/src/templates/partials/sections/_s-features-item.html
@@ -2,7 +2,7 @@
 <section class="section s-features-item bg-cover bg-center-center js-lazy"
   data-background-image="./img/bg-section/bg-kitchen.jpg">
   <div class="container">
-    <div class="section__title section__title-left">
+    <div class="section__title section__title-left js-anim-el" data-anim-name="fadeInLeft">
       <h2 class="title">На нашей кухне всегда <em class="accent">чисто</em></h2>
 
       <div class="section__subttl">Наш шеф-повар тщательно следит за порядком на кухне
