--- a/src/templates/partials/sections/_s-hits.html
+++ b/src/templates/partials/sections/_s-hits.html
@@ -1,10 +1,10 @@
 <!-- begin section -->
-<section class="section section--black s-hits pt-xll pb-mdl">
+<section class="section overflow-hidden section--black s-hits pt-xll pb-mdl">
   <div class="section__layer">
     <img data-src="./img/bg-layer.png" alt="" class="js-lazy">
   </div>
   <div class="container">
-    <div class="section__title">
+    <div class="section__title js-anim-el" data-anim-name="fadeInLeft">
       <h2 class="title title--white">Хиты продаж:</h2>
     </div>
   </div>
@@ -13,11 +13,11 @@
     {% include "partials/_hits-slider.html" %}
   </div>
 
-  <div class="section-img is-right is-top-200">
-    <img src="./img/pngs/pepper.png" alt="" class="js-lazy">
+  <div class="section-img is-right is-top-200 js-anim-el js-parallax-scene" data-anim-name="rotateInRight">
+    <img data-depth="0.1" data-src="./img/pngs/pepper.png" alt="" class="js-lazy">
   </div>
-  <div class="section-img is-left is-bottom">
-    <img src="./img/pngs/spice-04.png" alt="" class="js-lazy">
+  <div class="section-img is-left is-bottom js-anim-el js-parallax-scene" data-anim-name="rotateInLeft">
+    <img data-depth="0.3" data-src="./img/pngs/spice-04.png" alt="" class="js-lazy">
   </div>
 </section>
 <!-- end section -->
