--- a/src/sass/partials/_items.sass
+++ b/src/sass/partials/_items.sass
@@ -80,4 +80,57 @@
     box-shadow: 0px 2px 18px 0px rgba(0, 0, 0, 0.06)
     #{$this}__title
       color: $gray-dark
+  &--transp
+    border-color: transparent
+    background-color: transparent
+    +hover
+      border-color: transparent
+  &--transp-white
+    background-color: rgba($white, .1)
+
+.item-lg
+  +flex(flex-start, normal, row, wrap)
+  &__item
+    max-width: 330px
+    margin-left: auto
+    margin-right: auto
+  &__title-lg
+    margin-bottom: 25px
+    +semi
+    color: $white-dark
+    text-transform: uppercase
+    +css-lock(21, 35, 320, 1499, font-size)
+    +md
+      margin-bottom: 15px
+  &__title
+    margin-bottom: 8px
+    +semi
+    color: $white-dark
+    text-transform: uppercase
+    +md
+      margin-bottom: 4px
+  &__text
+    color: $gray-light
+  &__left
+    width: percentage(5/12)
+    +xs
+      width: 100%
+      margin-bottom: 15px
+  &__rigth
+    // +flex(flex-start, normal, row, wrap)
+    width: percentage(7/12)
+    padding-right: 85px
+    +lg
+      padding-right: 0
+    +xs
+      width: 100%
+  &__block
+    margin-bottom: 25px
+    +md
+      margin-bottom: 15px
+  &__block-auto
+    display: inline-block
+    vertical-align: top
+    +notlast
+      margin-right: 75px
 
