--- a/src/sass/partials/_slider.sass
+++ b/src/sass/partials/_slider.sass
@@ -143,6 +143,8 @@
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1)
     background-color: $white
     color: $gray
+  &--transp-white
+    background-color: rgba($white, .1)
 
 
 .next
