--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -66,12 +66,12 @@
         </div>
 
         <div class="header__burger">
-          <button href="#" class="burger js-burger"><span></span></button>
+          <button href="#" class="burger js-burger" data-menu-target="main_menu"><span></span></button>
         </div>
       </div>
     </div>
   </div>
-  <div class="header__bottom js-menu">
+  <div class="header__bottom js-menu" data-menu="main_menu">
     <button class="header__close js-menu-close"></button>
     <div class="container">
       <div class="header__inner">        
