--- a/src/templates/partials/sections/_s-item.html
+++ b/src/templates/partials/sections/_s-item.html
@@ -16,7 +16,9 @@
 
         <div class="item-lg__rigth">
           <div class="item-lg__block">
-            <div class="item-lg__title-lg">Люля-кебаб из баранины</div>
+            <div class="item-lg__title-lg">
+              <div class="title title--h3 title--white title--semi">Люля-кебаб из баранины</div>
+            </div>
 
             <div class="item-lg__text">Представляет собой мясной фарш из рубленной баранины,<br> нанизанный на шампур и зажаренный на мангале, с добавлением <br> лука (без использования хлеба и яиц). </div>
           </div>
