--- a/src/templates/partials/sections/_s-menu.html
+++ b/src/templates/partials/sections/_s-menu.html
@@ -21,6 +21,10 @@
       </div> 
 
       <div class="menu__items">
+      <div class="menu__title">
+        <div class="title title--h3 title--white title--semi">Люля-кебаб из баранины</div>
+      </div>
+
         {% for i in items %}
           <div class="menu__item">
             {{ mixins.item(
