--- a/src/sass/partials/_hero.sass
+++ b/src/sass/partials/_hero.sass
@@ -1,6 +1,6 @@
 .hero
   background-color: $black
-  position: relative
+  position: relative  
   .section-img
     z-index: 1
     opacity: 0
@@ -19,6 +19,7 @@
   &__text
     margin-bottom: 50px
     opacity: 0
+    max-width: 550px
     +md
       margin-bottom: 30px
     +sm
@@ -44,6 +45,14 @@
 
   .hero-slide
     +cover
+    +lg
+      .container
+        position: relative
+        z-index: 1
+      +before
+        +coverdiv
+        background-color: rgba($black, .6)
+        z-index: 0
     &__inner
       +flex(center, normal, column)
       padding-top: 10%
