--- a/src/sass/partials/_menu.sass
+++ b/src/sass/partials/_menu.sass
@@ -52,6 +52,13 @@
     +flex(flex-start, normal, row, wrap)
     +lg
       width: 100%
+  &__title
+    width: 100%
+    padding-left: 15px
+    padding-right: 15px
+    margin-bottom: 30px
+    +md
+      margin-bottom: 15px
   &__item
     padding-left: 15px
     padding-right: 15px
